# graduation_pro

./: .gitignore  Go2W轮足机器人长距离自主导航阶段性汇报报告.docx  readme.md
go2w_phase1_artifacts/: go2w_phase1_20260722_131215.tar.gz.sha256
go2w_phase1_artifacts/go2w_phase1_20260722_131215/: SHA256SUMS
go2w_phase1_artifacts/go2w_phase1_20260722_131215/evaluation/: evaluation_summary.txt
go2w_phase1_artifacts/go2w_phase1_20260722_131215/evaluation/2026-07-22_04-11-41/: metrics.json
go2w_phase1_artifacts/go2w_phase1_20260722_131215/evaluation/2026-07-22_04-12-35/: metrics.json
go2w_phase1_artifacts/go2w_phase1_20260722_131215/evaluation/2026-07-22_04-15-27/: metrics.json
go2w_phase1_artifacts/go2w_phase1_20260722_131215/evaluation/2026-07-22_04-18-21/: metrics.json
go2w_phase1_artifacts/go2w_phase1_20260722_131215/evaluation/2026-07-22_04-21-21/: metrics.json
go2w_phase1_artifacts/go2w_phase1_20260722_131215/evaluation/2026-07-22_04-24-12/: metrics.json
go2w_phase1_artifacts/go2w_phase1_20260722_131215/evaluation/2026-07-22_04-27-05/: metrics.json
go2w_phase1_artifacts/go2w_phase1_20260722_131215/metadata/: docker_image_inspect.json  docker_version.txt  git_commit.txt  nvidia_smi.txt  source_paths.txt
go2w_phase1_artifacts/go2w_phase1_20260722_131215/onnx/: ~
go2w_phase1_artifacts/go2w_phase1_20260722_131215/training_run/: events.out.tfevents.1784662526.ubuntu-66101.62.0  metadata.json
go2w_phase1_artifacts/go2w_phase1_20260722_131215/training_run/configs/: observation.yaml  sensor.yaml  training.yaml
go2w_phase1_artifacts/go2w_phase1_20260722_131215/training_run/params/: agent.yaml  env.yaml
go2w_terrain_planner/: .gitignore  Dockerfile  README.md  docker-compose.yaml
go2w_terrain_planner/configs/: action.yaml  reward.yaml  terrain.yaml  training.yaml
go2w_terrain_planner/docker/: entrypoint.sh
go2w_terrain_planner/scripts/: evaluate.py  export_onnx.py  list_envs.py  random_agent.py  verify_onnx.py  zero_agent.py
go2w_terrain_planner/scripts/rsl_rl/: play.py  train.py  train.py.bak_resume_episode_length
go2w_terrain_planner/source/go2w_terrain_planner/: setup.py
go2w_terrain_planner/source/go2w_terrain_planner/config/: extension.toml
go2w_terrain_planner/source/go2w_terrain_planner/docs/: CHANGELOG.rst
go2w_terrain_planner/source/go2w_terrain_planner/go2w_terrain_planner/: __init__.py
go2w_terrain_planner/source/go2w_terrain_planner/go2w_terrain_planner/mapping/: __init__.py  coordinate_transform.py  grid_preprocessor.py  simulated_local_map.py  temporal_grid_buffer.py
go2w_terrain_planner/source/go2w_terrain_planner/go2w_terrain_planner/models/: __init__.py  actor_critic.py  actor_critic.py.bak_actor_debug  map_encoder.py  temporal_encoder.py
go2w_terrain_planner/source/go2w_terrain_planner/go2w_terrain_planner/robots/: __init__.py  go2w_cfg.py  velocity_command_adapter.py
go2w_terrain_planner/source/go2w_terrain_planner/go2w_terrain_planner/tasks/: __init__.py
go2w_terrain_planner/source/go2w_terrain_planner/go2w_terrain_planner/tasks/direct/: __init__.py
go2w_terrain_planner/source/go2w_terrain_planner/go2w_terrain_planner/utils/: __init__.py  config_loader.py  logging_utils.py  tensor_checks.py
go2w_terrain_planner/tests/smoke/: smoke_env.py
go2w_terrain_planner/tests/unit/: test_config_loader.py  test_coordinate_transform.py  test_curriculum.py  test_execution_model.py  test_grid_preprocessor.py  test_logging_utils.py  test_network.py  test_observations.py  test_phase1_tensor_pipeline.py  test_rewards.py  test_simulated_local_map.py  test_temporal_buffer.py  test_torch_preprocessing.py
go2w_terrain_planner_minimal/: .dockerignore  Dockerfile  pyproject.toml
go2w_terrain_planner_minimal/docker/: entrypoint.sh
go2w_terrain_planner_minimal/scripts/: smoke_isaac.py
go2w_terrain_planner_minimal/src/go2w_terrain_planner/: __init__.py  preprocessing.py
go2w_terrain_planner_minimal/tests/unit/: test_preprocessing.py
lio_ws/: start_xt16_localization.sh
lio_ws/src/FAST_LIO/: CMakeLists.txt
lio_ws/src/FAST_LIO/config/: xt16.yaml
lio_ws/src/FAST_LIO/launch/: mapping_xt16.launch
lio_ws/src/FAST_LIO/rviz_cfg/: loam_livox.rviz
lio_ws/src/FAST_LIO/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
lio_ws/src/hesai_fastlio_adapter/: CMakeLists.txt  package.xml
lio_ws/src/hesai_fastlio_adapter/launch/: adapter.launch
lio_ws/src/hesai_fastlio_adapter/src/: hesai_fastlio_adapter_node.cpp
lio_ws/src/lio_loop_correction/: CMakeLists.txt  package.xml
lio_ws/src/lio_loop_correction/launch/: lio_loop_correction.launch  xt16_localization_with_loop_correction.launch
lio_ws/src/lio_loop_correction/src/: lio_loop_correction_node.cpp
local_map_ws/: .gitignore  README.md  build.sh  start_local_environment.sh
local_map_ws/src/: CMakeLists.txt
local_map_ws/src/ROG-Map/examples/: CATKIN_IGNORE
local_map_ws/src/ROG-Map/rog_map/: CMakeLists.txt
local_map_ws/src/ROG-Map/rog_map/include/rog_map/: observation_model.hpp  prob_map.h  rog_map.h
local_map_ws/src/ROG-Map/rog_map/include/rog_map/rog_map_core/: config.hpp
local_map_ws/src/ROG-Map/rog_map/include/utils/: common_lib.hpp
local_map_ws/src/ROG-Map/rog_map/src/rog_map/: prob_map.cpp  rog_map.cpp
local_map_ws/src/ROG-Map/rog_map/test/: test_observation_model.cpp
local_map_ws/src/go2w_local_environment/: CMakeLists.txt  README.md  package.xml
local_map_ws/src/go2w_local_environment/config/: grid_map_visualization.yaml  projector.yaml  rog_map_go2w.yaml
local_map_ws/src/go2w_local_environment/include/go2w_local_environment/: dual_layer_projector.hpp  elevation_projector.hpp
local_map_ws/src/go2w_local_environment/launch/: local_environment.launch  local_mapping_pipeline.launch  rog_map.launch
local_map_ws/src/go2w_local_environment/rviz/: local_elevation.rviz
local_map_ws/src/go2w_local_environment/src/: dual_layer_projector.cpp  elevation_projector.cpp  local_environment_node.cpp  rog_map_node.cpp
local_map_ws/src/go2w_local_environment/test/: test_dual_layer_projector.cpp  test_elevation_projector.cpp
(+13 files in other folders)
