[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go2w-terrain-planner"
version = "0.1.0"
description = "Learning-based local terrain planner for Unitree Go2W"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
