<?xml version="1.0"?>
<package format="2">
  <name>hesai_fastlio_adapter</name>
  <version>0.1.0</version>
  <description>Convert Hesai PointCloud2 timestamp fields for FAST-LIO2.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export/>
</package>
