<?xml version="1.0"?>
<package format="2">
  <name>lio_loop_correction</name>
  <version>0.0.1</version>
  <description>Lightweight loop closure detection and map-to-odom correction for FAST-LIO odometry.</description>

  <maintainer email="1445202423@qq.com">zezhao</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <export/>
</package>
